# gistvault

./: .gitignore  CLAUDE.md  Makefile  README.md  gistvault.py  pyproject.toml
doc/: architecture.md
src/gistvault/: __init__.py  __main__.py  gistvault.py
tests/: conftest.py  test_commands.py  test_crypto.py  test_fileio.py  test_gist.py  test_gistvault.py
