[project]
name = "gistvault"
version = "0.1.0"
description = "Encrypted secret storage backed by GitHub Gists"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py313"

[dependency-groups]
dev = [
    "cryptography>=46.0.6",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "typer>=0.9.0",
]
